add moveSD function

--- a/ipynb/OneClick-stable-diffusion.ipynb
+++ b/ipynb/OneClick-stable-diffusion.ipynb
@@ -21,12 +21,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2ce2fae8-24a6-400c-94ca-fd6cba45685f",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -64,15 +61,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ef32d892-2010-4a1c-b429-7ad98a1ac17a",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2722a3a964a04c5baf71a90c9a586aa1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(button_style='info', description='在使用【北京】代理', style=ButtonStyle(), tooltip='请点击下方的区名')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b284eaa9b14845bea40d936b0c840051",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='芜湖', style=ButtonStyle(), tooltip='Click me')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0076b6968ee346d3a147aec5556bd922",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(button_style='success', description='北京', icon='check', style=ButtonStyle(), tooltip='Click me')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5f946efa799d4cae8f02d3bb08d64207",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='内蒙', style=ButtonStyle(), tooltip='Click me')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b2c398f1469f438a8b751cec649c1bc8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='泉州', style=ButtonStyle(), tooltip='Click me')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5d98cde8589a4369b0d25f37d2add794",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='南京', style=ButtonStyle(), tooltip='Click me')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a5ecb31c8c204466a6941871618d8649",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='佛山', style=ButtonStyle(), tooltip='Click me')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append('../') # 因为func与ipynb位于同一个目录下，所以要往上一层路径索引\n",
@@ -93,15 +186,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "85cfa22d-8437-4508-87cf-57f7d13dcfc2",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c3a660b781f74cd187274c04ba8a0b31",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(button_style='success', description='环境部署成功!', icon='check', style=ButtonStyle(), tooltip='Description'…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from subprocess import getoutput\n",
     "from IPython.display import clear_output\n",
@@ -126,7 +231,6 @@
     "# clear_output(wait=True)\n",
     "# # print(\"Done!\")\n",
     "\n",
-    "\n",
     "widgets.Button(\n",
     "    value=False,\n",
     "    description='环境部署成功!',\n",
@@ -134,8 +238,7 @@
     "    button_style='success', # 'success', 'info', 'warning', 'danger' or ''\n",
     "    tooltip='Description',\n",
     "    icon='check' # (FontAwesome names without the `fa-` prefix)\n",
-    ")\n",
-    "\n"
+    ")"
    ]
   },
   {
@@ -158,16 +261,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d7c84343-104b-4d97-bad4-66f37b14c3cc",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "scrolled": true,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1f70f3f64fd54807b23bb5dd0df85a6d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(button_style='warning', description='正在更新...', icon='upload', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import os,sys\n",
     "sys.path.append('../') # 把上级路径也加入到系统路径中，这样就能够找到func\n",
@@ -269,15 +384,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "21d7715e-fac6-4e37-aac4-72dee6409a5f",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "本机GPU为【2080 Ti】，对应的英伟达架构名为【sm75】，已安装匹配【sm75】架构的Xformers预编译包\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "40b4e44ff8ba4b6ca098198a5e8d57db",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(button_style='success', description='已经预装', icon='check', style=ButtonStyle(), tooltip='Description')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import os,sys\n",
     "sys.path.append('../') # 把上级路径也加入到系统路径中，这样就能够找到func\n",
@@ -309,16 +443,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a51570b5-d491-427f-8e8f-3e3b62b2829a",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "scrolled": true,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2a359b20032b4c7a99c34c0c6023df3a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='安装中文语言包', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import os,sys\n",
     "sys.path.append('../') # 把上级路径也加入到系统路径中，这样就能够找到func\n",
@@ -402,16 +548,125 @@
    "execution_count": null,
    "id": "43bd2fb8-e193-4b6f-8530-d4b93cff5a19",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "已经挂载【北京】proxy\n",
+      "可以使用Xformers\n",
+      "https_proxy=http://100.72.64.19:12798\n",
+      "http_proxy=http://100.72.64.19:12798\n",
+      "Python 3.10.6 | packaged by conda-forge | (main, Aug 22 2022, 20:35:26) [GCC 10.4.0]\n",
+      "Commit hash: 47a44c7e421b98ca07e92dbf88769b04c9e28f86\n",
+      "Installing requirements for Web UI\n",
+      "Launching Web UI with arguments: --share --opt-split-attention --port 6006 --deepdanbooru --administrator --xformers\n",
+      "LatentDiffusion: Running in eps-prediction mode\n",
+      "DiffusionWrapper has 859.52 M params.\n",
+      "making attention of type 'vanilla' with 512 in_channels\n",
+      "Working with z of shape (1, 4, 32, 32) = 4096 dimensions.\n",
+      "making attention of type 'vanilla' with 512 in_channels\n",
+      "Loading weights [2700c435] from /root/autodl-tmp/stable-diffusion-webui/models/Stable-diffusion/Anything-V3.0-pruned.ckpt\n",
+      "Applying xformers cross attention optimization.\n",
+      "Model loaded.\n",
+      "Loaded a total of 0 textual inversion embeddings.\n",
+      "Embeddings: \n",
+      "Running on local URL:  http://127.0.0.1:6006\n",
+      "Running on public URL: https://a2f51637d41c75be.gradio.app\n",
+      "\n",
+      "This share link expires in 72 hours. For free permanent hosting and GPU upgrades (NEW!), check out Spaces: https://huggingface.co/spaces\n",
+      "Loading VAE weights from: /root/autodl-tmp/stable-diffusion-webui/models/VAE/Anything-V3.0.vae.pt\n",
+      "Applying xformers cross attention optimization.\n",
+      "VAE Weights loaded.\n",
+      "  0%|                                                    | 0/28 [00:00<?, ?it/s]\n",
+      "  4%|█▌                                          | 1/28 [00:00<00:21,  1.24it/s]\u001b[A\n",
+      " 11%|████▋                                       | 3/28 [00:01<00:06,  3.71it/s]\u001b[A\n",
+      " 18%|███████▊                                    | 5/28 [00:01<00:03,  5.82it/s]\u001b[A\n",
+      " 25%|███████████                                 | 7/28 [00:01<00:02,  7.26it/s]\u001b[A\n",
+      " 32%|██████████████▏                             | 9/28 [00:01<00:02,  8.11it/s]\u001b[A\n",
+      " 36%|███████████████▎                           | 10/28 [00:01<00:02,  8.37it/s]\u001b[A\n",
+      " 39%|████████████████▉                          | 11/28 [00:01<00:01,  8.57it/s]\u001b[A\n",
+      " 43%|██████████████████▍                        | 12/28 [00:02<00:01,  8.71it/s]\u001b[A\n",
+      " 46%|███████████████████▉                       | 13/28 [00:02<00:01,  8.81it/s]\u001b[A\n",
+      " 50%|█████████████████████▌                     | 14/28 [00:02<00:01,  8.88it/s]\u001b[A\n",
+      " 54%|███████████████████████                    | 15/28 [00:02<00:01,  8.92it/s]\u001b[A\n",
+      " 57%|████████████████████████▌                  | 16/28 [00:02<00:01,  8.96it/s]\u001b[A\n",
+      " 61%|██████████████████████████                 | 17/28 [00:02<00:01,  8.99it/s]\u001b[A\n",
+      " 64%|███████████████████████████▋               | 18/28 [00:02<00:01,  8.99it/s]\u001b[A\n",
+      " 68%|█████████████████████████████▏             | 19/28 [00:02<00:00,  9.00it/s]\u001b[A\n",
+      " 71%|██████████████████████████████▋            | 20/28 [00:02<00:00,  9.01it/s]\u001b[A\n",
+      " 75%|████████████████████████████████▎          | 21/28 [00:03<00:00,  9.01it/s]\u001b[A\n",
+      " 79%|█████████████████████████████████▊         | 22/28 [00:03<00:00,  9.01it/s]\u001b[A\n",
+      " 82%|███████████████████████████████████▎       | 23/28 [00:03<00:00,  9.02it/s]\u001b[A\n",
+      " 86%|████████████████████████████████████▊      | 24/28 [00:03<00:00,  9.02it/s]\u001b[A\n",
+      " 89%|██████████████████████████████████████▍    | 25/28 [00:03<00:00,  9.02it/s]\u001b[A\n",
+      " 93%|███████████████████████████████████████▉   | 26/28 [00:03<00:00,  9.03it/s]\u001b[A\n",
+      " 96%|█████████████████████████████████████████▍ | 27/28 [00:03<00:00,  9.02it/s]\u001b[A\n",
+      "100%|███████████████████████████████████████████| 28/28 [00:03<00:00,  7.35it/s]\u001b[A\n",
+      "Total progress: 100%|███████████████████████████| 28/28 [00:04<00:00,  6.89it/s]\n",
+      "  0%|                                                    | 0/28 [00:00<?, ?it/s]\n",
+      "  4%|█▌                                          | 1/28 [00:00<00:03,  7.17it/s]\u001b[A\n",
+      " 11%|████▋                                       | 3/28 [00:00<00:03,  8.02it/s]\u001b[A\n",
+      " 18%|███████▊                                    | 5/28 [00:00<00:02,  8.61it/s]\u001b[A\n",
+      " 25%|███████████                                 | 7/28 [00:00<00:02,  8.84it/s]\u001b[A\n",
+      " 29%|████████████▌                               | 8/28 [00:00<00:02,  8.88it/s]\u001b[A\n",
+      " 32%|██████████████▏                             | 9/28 [00:01<00:02,  8.93it/s]\u001b[A\n",
+      " 36%|███████████████▎                           | 10/28 [00:01<00:02,  8.96it/s]\u001b[A\n",
+      " 39%|████████████████▉                          | 11/28 [00:01<00:01,  8.98it/s]\u001b[A\n",
+      " 43%|██████████████████▍                        | 12/28 [00:01<00:01,  8.98it/s]\u001b[A\n",
+      " 46%|███████████████████▉                       | 13/28 [00:01<00:01,  8.98it/s]\u001b[A\n",
+      " 50%|█████████████████████▌                     | 14/28 [00:01<00:01,  8.98it/s]\u001b[A\n",
+      " 54%|███████████████████████                    | 15/28 [00:01<00:01,  8.98it/s]\u001b[A\n",
+      " 57%|████████████████████████▌                  | 16/28 [00:01<00:01,  9.00it/s]\u001b[A\n",
+      " 61%|██████████████████████████                 | 17/28 [00:01<00:01,  8.99it/s]\u001b[A\n",
+      " 64%|███████████████████████████▋               | 18/28 [00:02<00:01,  8.99it/s]\u001b[A\n",
+      " 68%|█████████████████████████████▏             | 19/28 [00:02<00:01,  8.98it/s]\u001b[A\n",
+      " 71%|██████████████████████████████▋            | 20/28 [00:02<00:00,  9.00it/s]\u001b[A\n",
+      " 75%|████████████████████████████████▎          | 21/28 [00:02<00:00,  8.91it/s]\u001b[A\n",
+      " 79%|█████████████████████████████████▊         | 22/28 [00:02<00:00,  8.92it/s]\u001b[A\n",
+      " 82%|███████████████████████████████████▎       | 23/28 [00:02<00:00,  8.95it/s]\u001b[A\n",
+      " 86%|████████████████████████████████████▊      | 24/28 [00:02<00:00,  8.95it/s]\u001b[A\n",
+      " 89%|██████████████████████████████████████▍    | 25/28 [00:02<00:00,  8.96it/s]\u001b[A\n",
+      " 93%|███████████████████████████████████████▉   | 26/28 [00:02<00:00,  8.97it/s]\u001b[A\n",
+      " 96%|█████████████████████████████████████████▍ | 27/28 [00:03<00:00,  8.97it/s]\u001b[A\n",
+      "100%|███████████████████████████████████████████| 28/28 [00:03<00:00,  8.84it/s]\u001b[A\n",
+      "Total progress: 100%|███████████████████████████| 28/28 [00:04<00:00,  5.97it/s]\n",
+      "  0%|                                                    | 0/28 [00:00<?, ?it/s]\n",
+      "  4%|█▌                                          | 1/28 [00:00<00:03,  6.97it/s]\u001b[A\n",
+      " 11%|████▋                                       | 3/28 [00:00<00:03,  7.97it/s]\u001b[A\n",
+      " 18%|███████▊                                    | 5/28 [00:00<00:02,  8.58it/s]\u001b[A\n",
+      " 25%|███████████                                 | 7/28 [00:00<00:02,  8.82it/s]\u001b[A\n",
+      " 29%|████████████▌                               | 8/28 [00:00<00:02,  8.88it/s]\u001b[A\n",
+      " 32%|██████████████▏                             | 9/28 [00:01<00:02,  8.92it/s]\u001b[A\n",
+      " 36%|███████████████▎                           | 10/28 [00:01<00:02,  8.95it/s]\u001b[A\n",
+      " 39%|████████████████▉                          | 11/28 [00:01<00:01,  8.96it/s]\u001b[A\n",
+      " 43%|██████████████████▍                        | 12/28 [00:01<00:01,  8.97it/s]\u001b[A\n",
+      " 46%|███████████████████▉                       | 13/28 [00:01<00:01,  8.97it/s]\u001b[A\n",
+      " 50%|█████████████████████▌                     | 14/28 [00:01<00:01,  8.97it/s]\u001b[A\n",
+      " 54%|███████████████████████                    | 15/28 [00:01<00:01,  8.98it/s]\u001b[A\n",
+      " 57%|████████████████████████▌                  | 16/28 [00:01<00:01,  8.99it/s]\u001b[A\n",
+      " 61%|██████████████████████████                 | 17/28 [00:01<00:01,  9.00it/s]\u001b[A\n",
+      " 64%|███████████████████████████▋               | 18/28 [00:02<00:01,  8.99it/s]\u001b[A\n",
+      " 68%|█████████████████████████████▏             | 19/28 [00:02<00:00,  9.00it/s]\u001b[A\n",
+      " 71%|██████████████████████████████▋            | 20/28 [00:02<00:00,  9.00it/s]\u001b[A\n",
+      " 75%|████████████████████████████████▎          | 21/28 [00:02<00:00,  9.01it/s]\u001b[A\n",
+      " 79%|█████████████████████████████████▊         | 22/28 [00:02<00:00,  9.00it/s]\u001b[A\n",
+      " 82%|███████████████████████████████████▎       | 23/28 [00:02<00:00,  9.00it/s]\u001b[A\n",
+      " 86%|████████████████████████████████████▊      | 24/28 [00:02<00:00,  8.99it/s]\u001b[A\n",
+      " 89%|██████████████████████████████████████▍    | 25/28 [00:02<00:00,  9.00it/s]\u001b[A\n",
+      " 93%|███████████████████████████████████████▉   | 26/28 [00:02<00:00,  9.00it/s]\u001b[A\n",
+      " 96%|█████████████████████████████████████████▍ | 27/28 [00:03<00:00,  9.00it/s]\u001b[A\n",
+      "100%|███████████████████████████████████████████| 28/28 [00:03<00:00,  8.84it/s]\u001b[A\n",
+      "Total progress: 100%|███████████████████████████| 28/28 [00:04<00:00,  5.68it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "import os,sys\n",
     "sys.path.append('../') # 把上级路径也加入到系统路径中，这样就能够找到func\n",
-    "from func.env import setProxy,webUIDir,extDir,findDir,findFile,getDirSize,styleURL,getArch,xformersDir\n",
+    "from func.env import setProxy,getWebUIDir,extDir,findDir,findFile,getDirSize,styleURL,getArch,xformersDir\n",
     "import ipywidgets as widgets\n",
     "from subprocess import getoutput\n",
     "from func.xformers import checkXformersInstalled\n",
@@ -441,6 +696,8 @@
     "    canUseXformers = False\n",
     "\n",
     "canUseXformers = True\n",
+    "\n",
+    "webUIDir = getWebUIDir()\n",
     "\n",
     "args = [\n",
     "        'source activate','&&',\n",
