--- a/ipynb/OneClick-install-extensions.ipynb
+++ b/ipynb/OneClick-install-extensions.ipynb
@@ -21,28 +21,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "4e6f72cd-63f0-42fb-ab3b-b287759b65e1",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "scrolled": true,
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='安装高分辨率修复原图调节拓展', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os,sys\n",
     "sys.path.append('../') # 把上级路径也加入到系统路径中，这样就能够找到func\n",
@@ -124,27 +112,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "03beeabc-da55-47bb-95ef-9675127ee7ca",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os,sys\n",
     "sys.path.append('../') # 把上级路径也加入到系统路径中，这样就能够找到func\n",
