update moveSD method

--- a/ipynb/moveSD-root-to-autodl-tmp.ipynb
+++ b/ipynb/moveSD-root-to-autodl-tmp.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f34677bb-9278-4ba3-a39d-272e4b06d82b",
    "metadata": {},
    "outputs": [],
@@ -22,9 +22,10 @@
     "from IPython.display import display\n",
     "import ipywidgets as widgets\n",
     "\n",
-    "webUIDir=getWebUIDir()\n",
-    "newDir='/root/autodl-tmp/stable-diffusion-webui'\n",
-    "# print(webUIDir)\n",
+    "# originDir=getWebUIDir() # 如果存在同名路径，通过getWebUIDir的方法去获取的路径会是最浅的那一个\n",
+    "originDir='/root/stable-diffusion-webui'\n",
+    "targetDir='/root/autodl-tmp/stable-diffusion-webui'\n",
+    "print(originDir)\n",
     "\n",
     "successBTN = widgets.Button(\n",
     "    value=False,\n",
@@ -44,11 +45,16 @@
     "    icon='check' # (FontAwesome names without the `fa-` prefix)\n",
     ")\n",
     "\n",
-    "if webUIDir!=newDir:\n",
-    "    !mv $webUIDir $newDir\n",
-    "    display(successBTN)\n",
+    "if os.path.exists(targetDir)==False:\n",
+    "    print('目标路径不存在，因此可以迁移')\n",
+    "    if originDir!=targetDir:\n",
+    "        !mv $originDir $targetDir\n",
+    "        display(successBTN)\n",
+    "    else:\n",
+    "        display(alreadyBTN)\n",
     "else:\n",
-    "    display(alreadyBTN)"
+    "    print('目标路径已经存在，因此删除系统盘中的SD')\n",
+    "    !rm -rf $originDir"
    ]
   }
  ],
