--- a/ipynb/OneClick-stable-diffusion.ipynb
+++ b/ipynb/OneClick-stable-diffusion.ipynb
@@ -173,8 +173,9 @@
     "from IPython.display import display,clear_output\n",
     "clear_output()\n",
     "import ipywidgets as widgets\n",
-    "from func.env import setProxy,webUIDir\n",
+    "from func.env import setProxy,getWebUIDir\n",
     "\n",
+    "webUIDir=getWebUIDir()\n",
     "debugging=False\n",
     "\n",
     "alertBtn = widgets.Button(\n",
@@ -385,12 +386,13 @@
    "source": [
     "import os,sys\n",
     "sys.path.append('../') # 把上级路径也加入到系统路径中，这样就能够找到func\n",
-    "from func.env import setProxy,getWebUIDir,extDir,findDir,findFile,getDirSize,styleURL,getArch,xformersDir\n",
+    "from func.env import setProxy,getWebUIDir,getExtDir,findDir,findFile,getDirSize,styleURL,getArch\n",
     "import ipywidgets as widgets\n",
     "from subprocess import getoutput\n",
     "from func.xformers import checkXformersInstalled\n",
     "from IPython.display import display,clear_output\n",
     "\n",
+    "extDir=getExtDir()\n",
     "archCondition = False\n",
     "canUseXformers = False\n",
     "\n",
@@ -451,6 +453,18 @@
     "\n",
     "!$cmd"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74e73a51-c63d-4ab8-8b6f-356405fd081c",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
