add wget download models

--- a/ipynb/moveSD-root-to-autodl-tmp.ipynb
+++ b/ipynb/moveSD-root-to-autodl-tmp.ipynb
@@ -5,7 +5,7 @@
    "id": "3a649246-2bd6-4020-bc31-7f4bad66e231",
    "metadata": {},
    "source": [
-    "# 移动SD路径————从根目录到autodl-tmp\n",
+    "# <i class=\"fa fa-running\"></i> 移动SD路径————从根目录到autodl-tmp\n",
     "因为默认的系统盘只有25G，如果装上各种拓展和模型，很快就塞爆，所以建议首先把stable-diffusion-webui移动到autodl-tmp目录下，这里有50G的空间，而且这样做也方便当机器被占用时进行跨实例拷贝数据"
    ]
   },
