--- a/start.ipynb
+++ b/start.ipynb
@@ -70,7 +70,7 @@
    "id": "5fea26e7-51b2-475d-b1f3-5879f18368bd",
    "metadata": {},
    "source": [
-    "# 移动SD路径————从根目录到autodl-tmp\n",
+    "# <i class=\"fa fa-running\"></i> 移动SD路径————从根目录到autodl-tmp\n",
     "因为默认的系统盘只有25G，如果装上各种拓展和模型，很快就塞爆，所以建议首先把stable-diffusion-webui移动到autodl-tmp目录下，这里有50G的空间，而且这样做也方便当机器被占用时进行跨实例拷贝数据"
    ]
   },
@@ -81,7 +81,8 @@
    "metadata": {
     "jupyter": {
      "source_hidden": true
-    }
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -90,10 +91,33 @@
   },
   {
    "cell_type": "markdown",
+   "id": "57b1b901-e2bb-408f-a4a4-daec891b2c35",
+   "metadata": {},
+   "source": [
+    "# <i class=\"fa fa-download\"></i> 下载模型与VAE\n",
+    "在默认的网络环境下模型与VAE的拉取速度足够快，也方便更新和替换新的模型，且镜像部署完成之后再下载，好处是在于镜像总体包体小，重置速度快，抢占显卡资源也能领先一步"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f82ddd8-ca59-4afa-8c92-b60c209a7bb0",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%run ./ipynb/wgetDownloadModels.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7ea0af26-9c23-4ebe-8a87-3547f1ec6fa8",
    "metadata": {},
    "source": [
-    "## 启动Stable Diffusion WebUI"
+    "# <i class=\"fa fa-rocket\"></i> 启动Stable Diffusion WebUI"
    ]
   },
   {
