improve extensions installer

--- a/ipynb/OneClick-install-extensions.ipynb
+++ b/ipynb/OneClick-install-extensions.ipynb
@@ -11,101 +11,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d32c2021-8d44-4002-b216-78210ac8e9f9",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "## <i class=\"fa fa-language\"></i> 安装高分辨率修复原图调节拓展（可选）"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4e6f72cd-63f0-42fb-ab3b-b287759b65e1",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
-    "scrolled": true,
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import os,sys\n",
-    "sys.path.append('../') # 把上级路径也加入到系统路径中，这样就能够找到func\n",
-    "from func.env import setProxy,webUIDir,extDir,findDir,getDirSize\n",
-    "import ipywidgets as widgets\n",
-    "from subprocess import getoutput\n",
-    "from IPython.display import display,clear_output\n",
-    "\n",
-    "try:\n",
-    "    proxy,region\n",
-    "except NameError:\n",
-    "    cb=setProxy()\n",
-    "    proxy=cb['proxy']\n",
-    "    region=cb['region']\n",
-    "    clear_output(wait=True)\n",
-    "\n",
-    "btn = widgets.Button(\n",
-    "    value=False,\n",
-    "    description='安装高分辨率修复原图调节拓展',\n",
-    "    disabled=False,\n",
-    "    button_style='', # 'success', 'info', 'warning', 'danger' or ''\n",
-    "    # tooltip='Description',\n",
-    "    # icon='check' # (FontAwesome names without the `fa-` prefix)\n",
-    ")\n",
-    "\n",
-    "def checkInstalled(zhLocalDir,firstInstall):\n",
-    "    fileSize = getDirSize(zhLocalDir)\n",
-    "    # print(fileSize)\n",
-    "    if fileSize>=48722 :\n",
-    "        if firstInstall==True:\n",
-    "            btn.description='安装成功!'\n",
-    "            btn.button_style='success'\n",
-    "            btn.icon='check'\n",
-    "        else:\n",
-    "            btn.description='已经安装过'\n",
-    "            btn.button_style='info'\n",
-    "            btn.icon='check-circle'\n",
-    "    else:\n",
-    "        # !rm -rf {dirpath}\n",
-    "        btn.description=\"安装失败\"\n",
-    "        btn.button_style='danger'\n",
-    "        btn.icon='exclamation-triangle'\n",
-    "\n",
-    "def install_language_pack(obj):\n",
-    "    zhLocalDir = os.path.join(extDir,'stable-diffusion-webui-conditioning-highres-fix')\n",
-    "    if os.path.exists(zhLocalDir):\n",
-    "        checkInstalled(zhLocalDir,False)\n",
-    "    else:\n",
-    "        import subprocess\n",
-    "        try:\n",
-    "            btn.description='安装中...'\n",
-    "            btn.button_style='warning'\n",
-    "            btn.icon='download'\n",
-    "            obj = subprocess.check_call(\n",
-    "                f'{proxy} &&\\\n",
-    "                cd {extDir} &&\\\n",
-    "                git clone https://github.com/klimaleksus/stable-diffusion-webui-conditioning-highres-fix',\n",
-    "                shell=True,\n",
-    "                universal_newlines=True,\n",
-    "                stdin=subprocess.PIPE, stdout=subprocess.PIPE, stderr=subprocess.STDOUT,\n",
-    "            )\n",
-    "            if obj==0:\n",
-    "                checkInstalled(zhLocalDir,True)\n",
-    "        except subprocess.CalledProcessError as e:\n",
-    "            print(\"Exception on process, rc=\", e.returncode, \"output=\", e.output)\n",
-    "\n",
-    "# btn.on_click(install_language_pack)\n",
-    "display(btn)\n",
-    "install_language_pack(btn)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "e8ece6d4-3423-4815-bff9-e5ed9d3b35d6",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## <i class=\"fa fa-palette\"></i> 下载个人整理的Style（可选）"
    ]
@@ -124,10 +33,13 @@
    "source": [
     "import os,sys\n",
     "sys.path.append('../') # 把上级路径也加入到系统路径中，这样就能够找到func\n",
-    "from func.env import setProxy,webUIDir,extDir,findDir,findFile,getDirSize,styleURL\n",
+    "from func.env import setProxy,getWebUIDir,getExtDir,findDir,findFile,getDirSize,styleURL\n",
     "import ipywidgets as widgets\n",
     "from subprocess import getoutput\n",
     "from IPython.display import display,clear_output\n",
+    "\n",
+    "extDir=getExtDir()\n",
+    "webUIDir=getWebUIDir()\n",
     "\n",
     "try:\n",
     "    proxy,region\n",
@@ -180,6 +92,99 @@
     "#     tooltip='Description',\n",
     "#     icon='check' # (FontAwesome names without the `fa-` prefix)\n",
     "# )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2b6b189-6748-4b64-a9f5-aa5df2eca3af",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## <i class=\"fa fa-language\"></i> 安装depthmap2mask（深度图遮罩）拓展（可选）"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d19aa84-c880-436e-a082-4c785f7d97a4",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import os,sys\n",
+    "sys.path.append('../') # 把上级路径也加入到系统路径中，这样就能够找到func\n",
+    "from func.extensionsInstaller import install\n",
+    "\n",
+    "extURL='https://github.com/Extraltodeus/depthmap2mask'\n",
+    "extFileSize=94941\n",
+    "\n",
+    "install(extURL,extFileSize)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df58e3fb-1f1b-48a2-8640-97578904cff0",
+   "metadata": {},
+   "source": [
+    "## <i class=\"fa fa-language\"></i> 安装高分辨率修复原图调节拓展（可选）"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af86bebd-53c3-4e62-ab28-5ff740deb418",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import os,sys\n",
+    "sys.path.append('../') # 把上级路径也加入到系统路径中，这样就能够找到func\n",
+    "from func.extensionsInstaller import install\n",
+    "\n",
+    "extURL='https://github.com/klimaleksus/stable-diffusion-webui-conditioning-highres-fix'\n",
+    "extFileSize=48653\n",
+    "\n",
+    "install(extURL,extFileSize)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4da2910-02c8-4a18-9569-da8f6d0f54f4",
+   "metadata": {},
+   "source": [
+    "## <i class=\"fa fa-language\"></i> 安装Dreambooth拓展（可选）"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e8993e1-9e76-458c-8fd5-f2bf27ee841c",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import os,sys\n",
+    "sys.path.append('../') # 把上级路径也加入到系统路径中，这样就能够找到func\n",
+    "from func.extensionsInstaller import install\n",
+    "from urllib.parse import urlparse\n",
+    "\n",
+    "extURL='https://github.com/d8ahazard/sd_dreambooth_extension'\n",
+    "extFileSize=7413077\n",
+    "\n",
+    "install(extURL,extFileSize)"
    ]
   }
  ],
