--- a/ipynb/OneClick-stable-diffusion.ipynb
+++ b/ipynb/OneClick-stable-diffusion.ipynb
@@ -323,11 +323,10 @@
     "sys.path.append('../') # 把上级路径也加入到系统路径中，这样就能够找到func\n",
     "from func.extensionsInstaller import install\n",
     "\n",
-    "extName='stable-diffusion-webui-localization-zh_CN'\n",
     "extURL='https://github.com/dtlnor/stable-diffusion-webui-localization-zh_CN'\n",
     "extFileSize=171055\n",
     "\n",
-    "install(extName,extURL,extFileSize)"
+    "install(extURL,extFileSize)"
    ]
   },
   {
@@ -357,11 +356,10 @@
     "sys.path.append('../') # 把上级路径也加入到系统路径中，这样就能够找到func\n",
     "from func.extensionsInstaller import install\n",
     "\n",
-    "extName='stable-diffusion-webui-images-browser'\n",
     "extURL='https://github.com/yfszzx/stable-diffusion-webui-images-browser'\n",
     "extFileSize=82945\n",
     "\n",
-    "install(extName,extURL,extFileSize)"
+    "install(extURL,extFileSize)"
    ]
   },
   {
