add new flag --disable-safe-unpickle

--- a/ipynb/OneClick-stable-diffusion.ipynb
+++ b/ipynb/OneClick-stable-diffusion.ipynb
@@ -375,9 +375,6 @@
    "execution_count": null,
    "id": "43bd2fb8-e193-4b6f-8530-d4b93cff5a19",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -427,7 +424,8 @@
     "        '--opt-split-attention',\n",
     "        '--port 6006',\n",
     "        '--deepdanbooru',\n",
-    "        '--administrator'\n",
+    "        '--administrator',\n",
+    "        '--disable-safe-unpickle'\n",
     "       ]\n",
     "\n",
     "try:\n",
