--- a/start.ipynb
+++ b/start.ipynb
@@ -92,7 +92,9 @@
   {
    "cell_type": "markdown",
    "id": "57b1b901-e2bb-408f-a4a4-daec891b2c35",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# <i class=\"fa fa-download\"></i> 下载模型与VAE\n",
     "在默认的网络环境下模型与VAE的拉取速度足够快，也方便更新和替换新的模型，且镜像部署完成之后再下载，好处是在于镜像总体包体小，重置速度快，抢占显卡资源也能领先一步"
@@ -103,13 +105,11 @@
    "execution_count": null,
    "id": "7f82ddd8-ca59-4afa-8c92-b60c209a7bb0",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
-    "%run ./ipynb/wgetDownloadModels.ipynb"
+    "# %run ./ipynb/wgetDownloadModels.ipynb"
    ]
   },
   {
